--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,11 @@ a {
     transform: rotate(360deg);
   }
 }
+
+.fixed-bottom {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  background-color: wheat
+}
