--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -42,10 +42,16 @@ a {
   }
 }
 
-.fixed-bottom {
-  width: 100%;
-  position: fixed;
-  bottom: 0;
-  text-align: center;
-  background-color: wheat
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
