--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,5 +1,14 @@
+
+
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  main {
+  flex-grow: 1;
+  padding-top: 20px;
+  }
 }
 
 .App-logo {
