--- a/src/styles/common/formPages.scss
+++ b/src/styles/common/formPages.scss
@@ -1,5 +1,8 @@
 .formPage{
   // background-color: blue;
+  h3 {
+    margin-bottom: 40px;
+  }
   form{
     background-color: lightblue;
     padding: 40px;
@@ -7,10 +10,12 @@
     label{
       font-weight: bold;
       font-size: 0.9rem;
+      
     }
     input, textarea{
       width: 100%;
       border: 1px solid rgba(0,0,0,0.2);
+      margin-top: 5px;
       margin-bottom: 10px;
       padding: 5px;
     }
