--- a/src/styles/Components/movieInfo.scss
+++ b/src/styles/Components/movieInfo.scss
@@ -1,7 +1,12 @@
-.movieInfo, header {
+.movieInfo-wrapper {
+  margin: 5px 100px;
+  border: 1px solid black;
+}
+
+header {
   display: flex;
   justify-content: space-between;
-  padding: 15px;
+  padding: 15px 50px;
   h1 {
     padding-left: 20px;
   }
@@ -17,44 +22,38 @@
   }
 }
 
-.movieInfo-wrapper  {
-  margin-top: 50px;
-  margin-bottom: 30px;
+.movieInfo-container  {
+  margin: 0px 50px 50px 50px;
+  border: 1px solid black;
   display: flex;
-  justify-content: center;
 }
 
 .movieImage {
-  padding-left: 0px;
+  padding: 5px;
   height: 100%;
   max-width: 50%;
   img {
     border-radius: 5px;
     height: 100%;
-    max-width: 50%;
+    max-width: 100%;
   }
 } 
 
 .movieDetails {
-  .actors-container {
+  padding: 5px;
+  div {
     display: flex;
     align-items: center;
   }
-  .directors-container {
-    display: flex;
-    align-items: center;
+  .genre-container  {
+    justify-content: center;
+    .genre {
+      margin: 5px 15px;
+      padding: 5px 10px;
+      border-radius: 10px;
+      background-color: red;
+    }
   }
+
 }
 
-.genre-container  {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .genre {
-    margin: 5px 15px;
-    padding: 5px 10px;
-    border-radius: 10px;
-    background-color: red;
-
-  }
-}
