--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -64,3 +64,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.user-info-div{
+  margin: 0 auto;
+  display: flex;
+}
+
