--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import './base';
 @import './variables';
 @import './common/formPages.scss';
+@import './components/movieSwipe';
 @import './components/movieInfo';
 @import './components/navBar.scss';
 @import './components/stickyFooter.scss';
