--- a/src/styles/Components/navBar.scss
+++ b/src/styles/Components/navBar.scss
@@ -1,6 +1,7 @@
 .navbar{
   // box-shadow: 0px 2px 10px rgba(0,0,0,0.2);
-  background-color: wheat;
+  background-color: $bgdark;
+  color: $headercolor;
   .nav-link, span{
     margin-left: 10px;
     cursor: pointer;
