--- a/src/styles/Components/stickyFooter.scss
+++ b/src/styles/Components/stickyFooter.scss
@@ -3,5 +3,9 @@
   position: fixed;
   bottom: 0;
   text-align: center;
-  background-color: wheat
+  background-color: $bgdark;
+  color: $headercolor;
+  p {
+    margin: 8px;
+  }
 }
