--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,3 +9,5 @@ $bglight: rgba(241, 235, 221);
 $black: rgba(3, 4, 1);
 $headercolor: rgba(248,212, 194);
 $paracolor: rgba(237, 201, 208);
+
+$box-shadow: 0px 2px 10px rgba(3,4,1,0.4);
