--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import './variables';
 @import './common/formPages.scss';
 @import './components/movieSwipe';
+@import './components/movieMatch';
 @import './components/movieInfo';
 @import './components/navBar.scss';
 @import './components/stickyFooter.scss';
