--- a/src/styles/common/formPages.scss
+++ b/src/styles/common/formPages.scss
@@ -14,15 +14,17 @@
     label{
       font-weight: bold;
       font-size: 0.9rem;
-      color: $headercolor;
     }
-    input, textarea{
+    input {
       width: 100%;
       border: 1px solid $bglight;
-      color: $headercolor;
+      color: $black;
       margin-top: 5px;
       margin-bottom: 10px;
       padding: 5px;
+    }
+    input:last-child {
+      color: $headercolor;
     }
   }
 }
