--- a/src/styles/Components/movieSwipe.scss
+++ b/src/styles/Components/movieSwipe.scss
@@ -12,7 +12,6 @@
   margin: 20px 50px 50px 50px;
   padding: 20px;
   background-color: lightgrey;
-  min-height: 100vh;
 }
 
 .preference-container {
@@ -28,7 +27,8 @@
     }
   }
   img {
-    max-width: 100px;
+    max-width: 410px;
+    // width: 100%;
   }
 }
 
