--- a/src/styles/Components/navBar.scss
+++ b/src/styles/Components/navBar.scss
@@ -2,6 +2,7 @@
   // box-shadow: 0px 2px 10px rgba(0,0,0,0.2);
   background-color: $bgdark;
   color: $headercolor;
+  height:70px;
   .nav-link, span{
     margin-left: 10px;
     cursor: pointer;
