--- a/src/styles/Components/stickyFooter.scss
+++ b/src/styles/Components/stickyFooter.scss
@@ -2,6 +2,7 @@
   width: 100%;
   position: fixed;
   bottom: 0;
+  height:40px;
   text-align: center;
   background-color: $bgdark;
   color: $headercolor;
