--- a/src/styles/Components/movieMatch.scss
+++ b/src/styles/Components/movieMatch.scss
@@ -1,35 +1,46 @@
-.matchContainer {
+.movieMatch {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
-  align-content: center;
+  justify-content: center;
+  align-items: center; 
+  margin-bottom: 40px
+}
+.match-container {
+  .form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    align-content: center;
+  }
+  h1 {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  h2 {
+    text-align: center;
+  }
+
+  input[type="text"] {
+    display: flex;
+    font-size: 1.4rem;
+  }
+  input.btn {
+    background: $bgdark;
+    color: $headercolor;
+    font-size: 1.2rem;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
 }
 
-input[type="text"] {
-  display: flex;
-}
-
-input.btn.w-100 {
-  background: $bgdark;
-  color: $headercolor;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-h1 {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin: 0 auto;
-  text-align: center;
-}
 
 @media (max-width: 180px) {
   form {
     display: flex;
     flex-direction: column;
     width: 80%;
-    margin: 0 auto;
 }
 }
 
