--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,9 @@
 @import './base';
 @import './variables';
 @import './common/formPages.scss';
-@import './components/movieSwipe';
+@import './components/importedMovieSwipe';
 @import './components/movieMatch';
 @import './components/movieInfo';
 @import './components/navBar.scss';
 @import './components/stickyFooter.scss';
-
+@import url('https://fonts.googleapis.com/css2?family=Electrolize&family=Lato:wght@300;400;700&display=swap');
