--- a/src/styles/Components/importedMovieSwipe.scss
+++ b/src/styles/Components/importedMovieSwipe.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: calc(100vh - 110px);
+  height: calc(100% - 110px);
 }
 
 .movieSwipe-container {
@@ -19,10 +19,103 @@
   align-items: center;
   margin: 20px 50px 50px 50px;
   padding: 20px;
-  background-color: lightgrey;
   height: 90%;
+  width: calc(100%*0.8);
+}
+
+.preference-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
+  .preferenceButtons {
+    margin: 20px 50px;
+    button {
+      padding: 30px 50px;
+      font-size: 40px;
+      // font-size: 40px;
+      border-radius: 50%;
+      }
+  }
+}
+
+button#no{
+  border-color: red;
+  color: red;
+}
+button#yes{
+  border-color: green;
+  color: green
+}
+
+button#yes:hover {
+  background-color: darkgreen;
+  border: black;
+  color: black;
+}
+
+button#no:hover {
+  background-color: darkred;
+  border: black;
+  color: black;
+}
+
+.movieImage {
+  padding: 5px;
 }
 
 main{
   flex-grow: 1;
+}
+
+.movieImage img {
+  border-radius: 5px;
+  width: calc(100vh*0.4);
+}
+
+.preference-container .preferenceButtons button {
+  padding: 30px 50px;
+  /* margin: 0px 20px; */
+  font-size: 40px;
+  border-radius: 50%;
+}
+
+div#movie-details {
+  font-size: 20px;
+}
+
+p#year {
+  font-size: 30px;
+}
+
+h2#movies-name {
+  font-size: 50px;
+}
+
+@media (max-width: 380px) {
+  .preference-container {
+    .preferenceButtons {
+      button {
+        font-size:20px;
+        padding: 30px;
+        background-color: none;
+        }
+    }
+  }
+  .preference-container {
+    .preferenceButtons {
+      button:hover {
+        background-color: none;
+        }
+    }
+  }
+  .movieImage img {
+    display: none;
+  }
+
+  h2#movies-name {
+    font-size: 40px;
+    margin: 0 auto;
+    text-align: center;
+}
 }
