--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,5 +1,6 @@
-*{
-  font-family:'Times New Roman', Times, serif;
+@import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Electrolize&family=Lato:wght@300;400;700&display=swap');
+* {
+  font-family: 'cinzel', sans-serif;
 }
 
 .site-wrapper {
