--- a/src/styles/Components/movieInfo.scss
+++ b/src/styles/Components/movieInfo.scss
@@ -1,14 +1,7 @@
-button.back-button {
-  margin: 5px 15px;
-  padding: 5px 10px;
-  border-radius: 10px;
-  background-color: $bgdark;
-  color: white;
-  border: solid;
-}
+
 header {
   display: flex;
-  padding: 15px 50px;
+  // padding: 15px 50px;
   color: black;
   h1 {
     font-size:30px;
@@ -53,9 +46,6 @@ header {
     display: flex;
     flex-direction: column;
 }
-.lead{
-  margin-left: 25px;
-}
 .movieDetails.col-md-8 {
   display: flex;
   flex-direction: column;
@@ -63,11 +53,11 @@ header {
 }
 .button-style-div {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
 }
   .genre-container  {
     .genre {
-      margin: 5px 15px;
+      margin: 5px 15px 0px 0px;      
       padding: 5px 10px;
       border-radius: 10px;
       background-color: $bglight;
@@ -79,9 +69,9 @@ header {
     justify-content: center;
   }
   p.actors, p.directors {
-    margin-left: 10px;
+    margin-right: 10px;
 }
-  .imdbLink {
+  .imdbLink, button.back-button{
     margin: 5px 15px;
     padding: 5px 10px;
     border-radius: 10px;
@@ -93,5 +83,10 @@ header {
         color: white;
       }
     }
+  .imdbRating{
+    p{
+    margin: 5px 10px;
+    }
+  }
 }
 
