profile page complete. Minor styling remaining

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,4 +6,6 @@
 @import './components/movieInfo';
 @import './components/navBar.scss';
 @import './components/stickyFooter.scss';
+@import './components/profile.scss';
+
 
