--- a/src/styles/Components/navBar.scss
+++ b/src/styles/Components/navBar.scss
@@ -2,6 +2,10 @@
   // box-shadow: 0px 2px 10px rgba(0,0,0,0.2);
   background-color: $bgdark;
   color: $headercolor;
+  .navbar-brand {
+    color: $headercolor;
+    font-size: 1.5rem;
+  }
   .navbar-toggler {
     background-color: $headercolor;
     margin-right: 8px;
