--- a/src/styles/common/formPages.scss
+++ b/src/styles/common/formPages.scss
@@ -16,6 +16,7 @@
       font-size: 0.9rem;
     }
     input {
+      font-family: Arial, Helvetica, sans-serif;
       width: 100%;
       border: 1px solid $bglight;
       color: $black;
