--- a/src/styles/common/errorMessage.scss
+++ b/src/styles/common/errorMessage.scss
@@ -1,3 +1,17 @@
-h2 {
-  text-align: center;
+.error-page {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  align-content: center;
+}
+
+.error-page-more-info {
+  margin-top: 1%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  align-content: center;
 }
