--- a/src/styles/Components/movieInfo.scss
+++ b/src/styles/Components/movieInfo.scss
@@ -2,7 +2,10 @@
 .movieInfo-wrapper {
   margin-top: 30px;
 }
-
+.movieImage.col {
+  display: flex;
+  justify-content: center;
+}
 header {
   display: flex;
   // padding: 15px 50px;
@@ -24,7 +27,7 @@ header {
 .movieInfo-container  {
   // margin: 50px 50px 50px 50px;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .movieImage {
@@ -38,59 +41,78 @@ header {
 .movieDetails {
   padding: 5px;
   color: black;
+  margin-left: 10px;
   div {
     display: flex;
     align-items: flex-start;
     p {
       margin-bottom: 8px;
     }
+    .col-md-8 {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
   }
-
+  }
+  .button-style-div {
+    display: flex;
+    justify-content: flex-start;
+    padding: 0px 0px 40px 0px;
+  }
+    .genre-container  {
+      .genre {
+        margin: 0px 15px 0px 0px;      
+        padding: 5px 10px;
+        border-radius: 10px;
+        background-color: $bglight;
+        color: $black;
+        border: solid;
+      }
+    }
+    .actors-container, .directors-container {
+      justify-content: center;
+    }
+    p.actors, p.directors {
+      margin-right: 10px;
+  }
+    .imdbLink, button.back-button{
+      margin: 5px 15px;
+      padding: 5px 10px;
+      border-radius: 10px;
+      background-color: $bgdark;
+      color: $headercolor;
+      border: solid;
+        a {
+          text-decoration: none;
+          color: $headercolor;
+        }
+      }
+    .imdbRating{
+      display:flex;
+      flex-direction: column;
+      p{
+      text-align:center;
+      }
+    }
+  }
   .actors-and-directors-container {
     display: flex;
     flex-direction: column;
 }
-.movieDetails.col-md-8 {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+
+@media (min-height: 776px){
+  .movieInfo-wrapper.container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
-.button-style-div {
-  display: flex;
-  justify-content: flex-start;
-}
-  .genre-container  {
-    .genre {
-      margin: 5px 15px 0px 0px;      
-      padding: 5px 10px;
-      border-radius: 10px;
-      background-color: $bglight;
-      color: $black;
-      border: solid;
-    }
-  }
-  .actors-container, .directors-container {
-    justify-content: center;
-  }
-  p.actors, p.directors {
-    margin-right: 10px;
-}
-  .imdbLink, button.back-button{
-    margin: 5px 15px;
-    padding: 5px 10px;
-    border-radius: 10px;
-    background-color: $bgdark;
-    color: white;
-    border: solid;
-      a {
-        text-decoration: none;
-        color: white;
-      }
-    }
-  .imdbRating{
-    p{
-    margin: 5px 10px;
-    }
-  }
 }
 
+@media (max-width: 600px) {
+  .imdbRating p {
+    display: none;
+}
+.lead{    
+  padding: 20px 0px 0px 0px;}
+}
