--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,5 +9,6 @@
 @import './components/navBar.scss';
 @import './components/stickyFooter.scss';
 @import './components/profile.scss';
+@import './components/homepage.scss';
 
 @import url('https://fonts.googleapis.com/css2?family=Electrolize&family=Lato:wght@300;400;700&display=swap');
