--- a/src/styles/Components/movieInfo.scss
+++ b/src/styles/Components/movieInfo.scss
@@ -2,14 +2,13 @@
 .movieInfo-wrapper {
   margin-top: 30px;
 }
-.movieImage.col {
+.movieInfoImage.col {
   display: flex;
   justify-content: center;
 }
 header {
   display: flex;
-  // padding: 15px 50px;
-  color: black;
+  color: $black;
   h1 {
     font-size:30px;
   }
@@ -25,12 +24,11 @@ header {
 }
 
 .movieInfo-container  {
-  // margin: 50px 50px 50px 50px;
   display: flex;
   align-items: center;
 }
 
-.movieImage {
+.movieInfoImage {
   padding: 5px;
   img {
     margin-left: 20px;
@@ -109,10 +107,16 @@ header {
 }
 }
 
+@media (max-width: 767px) {
+  .movieInfoImage.col{
+    display: none;
+  }
+}
+
 @media (max-width: 600px) {
   .imdbRating p {
     display: none;
-}
-.lead{    
-  padding: 20px 0px 0px 0px;}
+  }
+  .lead{    
+    padding: 20px 0px 0px 0px;}
 }
