--- a/src/styles/Components/movieMatch.scss
+++ b/src/styles/Components/movieMatch.scss
@@ -25,6 +25,7 @@
   input[type="text"] {
     display: flex;
     font-size: 1.4rem;
+    font-family: Arial, Helvetica, sans-serif;
   }
   input.btn {
     background: $bgdark;
@@ -34,7 +35,6 @@
     margin-bottom: 20px;
   }
 }
-
 
 @media (max-width: 180px) {
   form {
