--- a/src/styles/common/formPages.scss
+++ b/src/styles/common/formPages.scss
@@ -1,6 +1,9 @@
 .formPage{
-  // background-color: blue;
   margin-top: 50px;
+  .form-container{
+    display: flex;
+    justify-content: center;
+  }
   h1 {
     margin-bottom: 20px;
     text-align: center;
@@ -11,6 +14,7 @@
     padding: 40px;
     border-radius: 20px;
     color: $headercolor;
+    max-width: 720px;
     label{
       font-weight: bold;
       font-size: 0.9rem;
