--- a/src/styles/Components/homepage.scss
+++ b/src/styles/Components/homepage.scss
@@ -1,14 +1,15 @@
 .homepage-text {
-  padding: 100px;
+  padding: 30px 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  align-content: center;
+  p {
+    text-align: left;
+  }
 }
 
 
 .watchit-title {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
